--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "ip": "^2.0.1",
+    "mongoose": "^8.7.3"
   },
   "name": "docker",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "build": "tsc",
-    "start": "node build/server.js",
+    "start": "node dist/server.js",
     "tsc": "tsc -p tsconfig.json",
     "server": "ts-node-dev src/server.ts",
     "test": "jest --watchAll"
@@ -18,5 +22,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/ip": "^1.1.3",
+    "@types/node": "^22.8.2",
+    "typescript": "^5.6.3"
+  }
 }
