--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "name": "docker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
